--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
     "react-router-modal": "^1.3.5",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-tooltip": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
